name:                startapp
version:             0.1.0.0
synopsis:            Initial project template for productive web development
description:         Please see README.md
homepage:            http://github.com/name/project
license:             MIT
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
                     , Config
                     , Config.Database
                     , Config.Environment
                     , Controllers.Sessions
                     , Controllers.Users
                     , Models
                     , Models.Common
                     , Models.User
                     , Models.Validations
                     , Views.Sessions
                     , Views.Sessions.New
                     , Views.Users
                     , Views.Users.New

  build-depends:       base >= 4.7 && < 5
                     , Spock
                     , Spock-digestive
                     , aeson
                     , base16-bytestring
                     , bytestring
                     , configurator
                     , containers
                     , cryptohash
                     , digestive-bootstrap
                     , digestive-functors
                     , halive
                     , http-types
                     , hvect
                     , lucid
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , random
                     , resourcet
                     , shakespeare
                     , text
                     , time
                     , transformers
                     , wai-extra
                     , wai-middleware-static
                     , word8
  default-language:    Haskell2010

executable startapp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , startapp
  default-language:    Haskell2010

test-suite startapp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , startapp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
